# railyard

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  compose.yaml  crates.js  deployment.yaml  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: rust.yml
examples/server/: Cargo.toml  run_cluster.sh
examples/server/src/: main.rs
proto/: cluster_management.proto  railyard.proto
railyard/: all.html  index.html  sidebar-items.js  struct.Railyard.html
src/: client.rs  cluster_management_service.rs  lib.rs  main.rs  node.rs  railyard_service.rs  server.rs
src/railyard/: lib.rs.html  mod.rs  railyard.proto  service.rs
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
