[package]
name = "railyard"
version = "0.0.1"
edition = "2021"
description = "Railyard is an implementation of the Raft concensus algorithm using Tonic"
license = "MIT"
repository = "https://github.com/emersonmde/railyard"
documentation = "https://errorsignal.dev/railyard/railyard/index.html"
readme = "README.md"
keywords = ["raft", "consensus", "tonic", "distributed", "systems"]
categories = ["network-programming", "concurrency", "asynchronous", "api-bindings"]
authors = ["Matthew Emerson <emersonmde@protonmail.com>"]

[lib]
name = "railyard"
path = "src/lib.rs"

[dependencies]
prost = "0.12.1"
rustls = "0.21.7"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.10.2", features = ["tls"] }
rand = "0.8.5"
uuid = { version = "1.5.0", features = ["v4"] }
anyhow = "1.0.75"
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.10.2"
